--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť do nového roku! 🥂</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 09.01.2025 07:36:50 | Praha: 5°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť do nového roku! 🥂</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 09.01.2025 08:03:08 | Praha: 5°C, Převážně jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -151,16 +151,6 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Filírovaný FLANK STEAK</span>
-<span class="allergen">(A: 1, 7, 12)</span>
-<p class="desc">s houbovým přelivem, hranolky</p>
-</td>
-<td class="price cond">
-        199 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
 <span class="title cond">Masové kuličky v rajské omáčce</span>
 <span class="allergen">(A: 1, 3, 7)</span>
 <p class="desc">s houskovým knedlíkem</p>
@@ -201,12 +191,32 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
+<span class="title cond">Vepřové Kung Pao</span>
+<span class="allergen">(A: 1, 4, 5, 6)</span>
+<p class="desc">s rýží </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
 <span class="title cond">Burger s trhaným vepřovým masem,</span>
 <span class="allergen">(A: 1, 3, 7, 11, 12)</span>
 <p class="desc">karamelizovanou cibulkou, hranolky a coleslaw </p>
 </td>
 <td class="price cond">
         189 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Filírovaný FLANK STEAK</span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s houbovým přelivem, hranolky</p>
+</td>
+<td class="price cond">
+        199 Kč    </td>
 </tr>
 </table>
 </div>
